--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@prisma/client": "^4.2.1",
+    "@trpc/client": "^9.27.0",
+    "@trpc/next": "^9.27.0",
+    "@trpc/react": "^9.27.0",
+    "@trpc/server": "^9.27.0",
+    "nanoid": "^4.0.0",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "zod": "^3.18.0",
-    "@prisma/client": "^4.2.1",
     "react-query": "^3.39.2",
     "superjson": "^1.9.1",
-    "@trpc/server": "^9.27.0",
-    "@trpc/client": "^9.27.0",
-    "@trpc/next": "^9.27.0",
-    "@trpc/react": "^9.27.0"
+    "zod": "^3.18.0"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
@@ -28,13 +29,13 @@
     "@types/react-dom": "18.0.5",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
+    "autoprefixer": "^10.4.8",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
-    "typescript": "4.7.4",
+    "postcss": "^8.4.16",
     "prisma": "^4.2.1",
     "tailwindcss": "^3.1.8",
-    "postcss": "^8.4.16",
-    "autoprefixer": "^10.4.8"
+    "typescript": "4.7.4"
   },
   "ct3aMetadata": {
     "initVersion": "5.7.0"
